--- a/auth/package.json
+++ b/auth/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mfsvton/common": "^1.0.2",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
