--- a/auth/package.json
+++ b/auth/package.json
@@ -4,13 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "test": "jest --watchAll --no-cache",
+    "test:ci": "jest --runInBand --force-exit"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@mfsvton/common": "^1.0.2",
+    "@types/cookie-session": "^2.0.44",
+    "@types/jsonwebtoken": "^8.5.8",
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
@@ -21,8 +32,14 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
+    "@types/jest": "^28.1.6",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0"
+    "eslint": "^8.20.0",
+    "jest": "^28.1.3",
+    "mongodb-memory-server": "^8.8.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7"
   }
 }
