--- a/auth/package.json
+++ b/auth/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
