--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -17,3 +17,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: mofasa101/customers
+      context: customers
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
