deploy, test, ingress, skaffold for customers, garments

--- a/infra/k8s-dev/ingress-depl.yaml
+++ b/infra/k8s-dev/ingress-depl.yaml
@@ -24,3 +24,10 @@ spec:
                 name: customers-srv
                 port:
                   number: 3000
+          - path: /api/garments/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: garments-srv
+                port:
+                  number: 3000
