--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -25,3 +25,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: mofasa101/garments
+      context: garments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
