cart depl, skaffold

--- a/infra/k8s-dev/ingress-depl.yaml
+++ b/infra/k8s-dev/ingress-depl.yaml
@@ -31,3 +31,10 @@ spec:
                 name: garments-srv
                 port:
                   number: 3000
+          - path: /api/cart/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: cart-srv
+                port:
+                  number: 3000
