deploy & ingress & skaffold update for orders service

--- a/infra/k8s-dev/ingress-depl.yaml
+++ b/infra/k8s-dev/ingress-depl.yaml
@@ -38,3 +38,10 @@ spec:
                 name: cart-srv
                 port:
                   number: 3000
+          - path: /api/orders/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: cart-srv
+                port:
+                  number: 3000
