--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -41,3 +41,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: mofasa101/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
