fixed typo in ingress

--- a/infra/k8s-dev/ingress-depl.yaml
+++ b/infra/k8s-dev/ingress-depl.yaml
@@ -42,6 +42,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: cart-srv
+                name: orders-srv
                 port:
                   number: 3000
