--- a/auth/package.json
+++ b/auth/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mfsvton/common": "^1.0.2",
+    "@mfsvton/common": "^1.0.10",
     "@types/cookie-session": "^2.0.44",
     "@types/jsonwebtoken": "^8.5.8",
     "cookie-session": "^2.0.0",
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
