--- a/infra/k8s-prod/ingress-depl.yaml
+++ b/infra/k8s-prod/ingress-depl.yaml
@@ -45,3 +45,10 @@ spec:
                 name: cart-srv
                 port:
                   number: 3000
+          - path: /api/payments/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: payments-srv
+                port:
+                  number: 3000
