--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -49,3 +49,19 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: mofasa101/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.js"
+            dest: .
+    - image: mofasa101/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.js"
+            dest: .
