--- a/texturemap/Dockerfile
+++ b/texturemap/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu
 
 RUN apt update && apt install python3 python3-pip -y
-RUN pip install opencv-python numpy "uvicorn[standard]"
+RUN pip3 install opencv-python numpy "uvicorn[standard]" asyncio-nats-streaming enum34
 WORKDIR /app
 
 COPY . .
