front,back,photos added to new,update & events garments

--- a/infra/k8s/garments-depl.yaml
+++ b/infra/k8s/garments-depl.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: garments
           image: mofasa101/garments
+          imagePullPolicy: Never
           env:
             - name: JWT_KEY
               valueFrom:
