--- a/texturemap/Dockerfile
+++ b/texturemap/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9.13-slim-buster
 
-#RUN apt update && apt install python3 python3-pip -y
+RUN apt update && apt install python3-opencv -y
 
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt
@@ -8,4 +8,4 @@ WORKDIR /app
 
 COPY . .
 
-CMD ["python3", "main.py"]
+CMD ["python", "main.py"]
