--- a/infra/k8s-prod/ingress-depl.yaml
+++ b/infra/k8s-prod/ingress-depl.yaml
@@ -4,10 +4,10 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: ticketing.dev
+    - host: vton.dev
       http:
         paths:
           - path: /api/users/?(.*)
@@ -42,7 +42,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: cart-srv
+                name: orders-srv
                 port:
                   number: 3000
           - path: /api/payments/?(.*)
@@ -50,5 +50,12 @@ spec:
             backend:
               service:
                 name: payments-srv
+                port:
+                  number: 3000
+          - path: /?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: client-srv
                 port:
                   number: 3000
