--- a/body-garment/requirements.txt
+++ b/body-garment/requirements.txt
@@ -1,8 +1,9 @@
 pyjwt
 fastapi
-"uvicorn[standard]"
+uvicorn[standard]
 asyncio-nats-streaming
 asyncio-nats-client
 sqlmodel 
 protobuf==3.20.0
 websockets
+psycopg2-binary
