--- a/infra/k8s-dev/ingress-depl.yaml
+++ b/infra/k8s-dev/ingress-depl.yaml
@@ -52,6 +52,13 @@ spec:
                 name: payments-srv
                 port:
                   number: 3000
+          - path: /api/bodygarment/lower/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: lower-srv
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: Prefix
             backend:
