--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
