--- a/body-garment/requirements.txt
+++ b/body-garment/requirements.txt
@@ -1,9 +1,10 @@
 pyjwt
-fastapi
-uvicorn[standard]
+fastapi==0.68.1
+uvicorn==0.15.0
 asyncio-nats-streaming
 asyncio-nats-client
-sqlmodel 
+sqlmodel
 protobuf==3.20.0
 websockets
-psycopg2-binary
+asyncpg==0.24.0
+sqlalchemy[asyncio]
