--- a/.github/workflows/deploy-admins.yaml
+++ b/.github/workflows/deploy-admins.yaml
@@ -1,20 +1,20 @@
-name: deploy-texturemap
+name: deploy-admins
 
 on:
   push:
     branches:
       - master
     paths:
-      - "texturemap/**"
+      - "admins/**"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: cd texturemap && docker build -t mofasa101/texturemap .
+      - run: cd admins && docker build -t mofasa101/admins .
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker push mofasa101/texturemap
+      - run: docker push mofasa101/admins
