--- a/infra/k8s-dev/local-pv.yaml
+++ b/infra/k8s-dev/local-pv.yaml
@@ -2,20 +2,14 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: local-pv
+  labels:
+    type: local
 spec:
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: standard
   capacity:
     storage: 3Gi
   accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-storage
-  local:
-    path: /tmp/pv
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - minikube
+    - ReadWriteOnce
+  hostPath:
+    path: "/tmp/pv"
