--- a/infra/k8s-dev/local-pvc.yaml
+++ b/infra/k8s-dev/local-pvc.yaml
@@ -1,13 +1,11 @@
-kind: PersistentVolumeClaim
 apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: local-claim
+  name: local-pvc
 spec:
+  storageClassName: standard
   accessModes:
-  - ReadWriteOnce
-  volumeName: local-pv
-  storageClassName: local-storage
-  volumeMode: Filesystem
+    - ReadWriteOnce
   resources:
     requests:
       storage: 3Gi
