--- a/infra/k8s-dev/storage-class.yaml
+++ b/infra/k8s-dev/storage-class.yaml
@@ -2,5 +2,6 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: local-storage
+reclaimPolicy: Retain
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
