--- a/infra/k8s/admins-depl.yaml
+++ b/infra/k8s/admins-depl.yaml
@@ -32,7 +32,7 @@ spec:
                   name: jwt-secret
                   key: JWT_KEY
             - name: MONGO_URI
-              value: "mongodb://admins-mongo-srv:27017/admins"
+              value: "mongodb+srv://try:00000000@cluster0.iqbmt.mongodb.net/admins"
 ---
 apiVersion: v1
 kind: Service
