--- a/infra/k8s/cart-depl.yaml
+++ b/infra/k8s/cart-depl.yaml
@@ -32,7 +32,7 @@ spec:
                   name: jwt-secret
                   key: JWT_KEY
             - name: MONGO_URI
-              value: "mongodb://cart-mongo-srv:27017/cart"
+              value: "mongodb+srv://try:00000000@cluster0.iqbmt.mongodb.net/cart"
 ---
 apiVersion: v1
 kind: Service
