--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -41,14 +41,6 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: mofasa101/admins
-      context: admins
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: 'src/**/*.ts'
-            dest: .
     - image: mofasa101/garments
       context: garments
       docker:
@@ -90,7 +82,7 @@ build:
           - src: 'src/**/*.js'
             dest: .
     - image: mofasa101/bodygarment
-      context: body-garment
+      context: bodygarment
       docker:
         dockerfile: Dockerfile
       sync:
