--- a/garments/package.json
+++ b/garments/package.json
@@ -20,9 +20,11 @@
   "license": "ISC",
   "dependencies": {
     "@mfsvton/common": "^1.0.26",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cookie-session": "^2.0.44",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
