--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,11 @@
     "@heroicons/react": "^2.0.4",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
-    "next": "12.2.5",
+    "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-query": "^3.39.2",
     "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
