--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-query": "^3.39.2",
+    "react-stripe-checkout": "^2.6.3",
     "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
