--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.4",
+    "@mantine/core": "^5.5.2",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "next": "^12.3.0",
