--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.4",
     "@mantine/core": "^5.5.2",
+    "@mantine/dropzone": "^5.5.4",
+    "@tabler/icons": "^1.101.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "next": "^12.3.0",
